[package]
name = "rabbit-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitmq-stream-client = "*"

[[bin]]
name = "message-producer"
path = "src/message_producer.rs"

[[bin]]
name = "message-consumer"
path = "src/message_consumer.rs"
